tantalum_parser/src/tests/snapshots/tantalum_parser__tests__expression__BinaryOperation__Modulus.snap
---
source: tantalum_parser/src/tests/expression.rs
expression: result
snapshot_kind: text
---
Ok(Expression(
  span: Span(
    start: Location(
      file_name: "Modulus",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "Modulus",
      position: 5,
      line: 1,
      column: 6,
    ),
  ),
  kind: BinaryOperation(
    left: Expression(
      span: Span(
        start: Location(
          file_name: "Modulus",
          position: 0,
          line: 1,
          column: 1,
        ),
        end: Location(
          file_name: "Modulus",
          position: 1,
          line: 1,
          column: 2,
        ),
      ),
      kind: IntegerLiteral(
        value: "1",
        radix: 10,
      ),
    ),
    operator: BinaryOperator(
      span: Span(
        start: Location(
          file_name: "Modulus",
          position: 2,
          line: 1,
          column: 3,
        ),
        end: Location(
          file_name: "Modulus",
          position: 3,
          line: 1,
          column: 4,
        ),
      ),
      kind: Modulus,
    ),
    right: Expression(
      span: Span(
        start: Location(
          file_name: "Modulus",
          position: 4,
          line: 1,
          column: 5,
        ),
        end: Location(
          file_name: "Modulus",
          position: 5,
          line: 1,
          column: 6,
        ),
      ),
      kind: IntegerLiteral(
        value: "2",
        radix: 10,
      ),
    ),
  ),
))
